develop: Enhancements and added Envoy.

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -906,7 +906,7 @@ RUN if [ ${INSTALL_MYSQL_CLIENT} = true ]; then \
 ;fi
 
 ###########################################################################
-# Daemons:
+# Custom develop tools:
 ###########################################################################
 
 USER root
