--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -917,6 +917,7 @@ RUN if [ ${WORKSPACE_INSTALL_PROCESS_CONTROL_SYSTEMS} = true ]; then \
     apt-get update -yqq && \
     apt-get -y install supervisor && \
     apt-get -y install monit \
+    apt-get -y install htop \
 ;fi
 
 ###########################################################################
